# app/docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/v1/sum": {
             "get": {
-                "description": "Sum in query string",
+                "description": "Handle the sum service using the query string",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,7 +16,7 @@
                 "tags": [
                     "sum"
                 ],
-                "summary": "Sum in query string",
+                "summary": "Handle the sum service using the query string",
                 "parameters": [
                     {
                         "type": "integer",
@@ -37,19 +37,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-endpoints_sumOutput"
+                            "$ref": "#/definitions/Response-SumOutput"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-string"
+                            "$ref": "#/definitions/Response-string"
                         }
                     }
                 }
             },
             "post": {
-                "description": "Sum as post",
+                "description": "Handle the sum service using the body",
                 "consumes": [
                     "application/json"
                 ],
@@ -59,7 +59,7 @@
                 "tags": [
                     "sum"
                 ],
-                "summary": "Sum as post",
+                "summary": "Handle the sum service using the body",
                 "parameters": [
                     {
                         "description": "body input",
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/endpoints.sumInput"
+                            "$ref": "#/definitions/SumInput"
                         }
                     }
                 ],
@@ -75,13 +75,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-endpoints_sumOutput"
+                            "$ref": "#/definitions/Response-SumOutput"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-string"
+                            "$ref": "#/definitions/Response-string"
                         }
                     }
                 }
@@ -89,7 +89,7 @@
         },
         "/api/v1/sum/{num1}": {
             "get": {
-                "description": "Sum with first number in route path and second in query string",
+                "description": "Handle sum with first number in route path and second in query string",
                 "consumes": [
                     "application/json"
                 ],
@@ -99,7 +99,7 @@
                 "tags": [
                     "sum"
                 ],
-                "summary": "Sum with first number in route path and second in query string",
+                "summary": "Handle sum with first number in route path and second in query string",
                 "parameters": [
                     {
                         "type": "integer",
@@ -120,13 +120,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-endpoints_sumOutput"
+                            "$ref": "#/definitions/Response-SumOutput"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-string"
+                            "$ref": "#/definitions/Response-string"
                         }
                     }
                 }
@@ -134,7 +134,7 @@
         },
         "/api/v1/sum/{num1}/{num2}": {
             "get": {
-                "description": "Sum as route path",
+                "description": "Handle the sum service using the route path",
                 "consumes": [
                     "application/json"
                 ],
@@ -144,7 +144,7 @@
                 "tags": [
                     "sum"
                 ],
-                "summary": "Sum as route path",
+                "summary": "Handle the sum service using the route path",
                 "parameters": [
                     {
                         "type": "integer",
@@ -165,36 +165,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-endpoints_sumOutput"
+                            "$ref": "#/definitions/Response-SumOutput"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-string"
-                        }
-                    }
-                }
-            }
-        },
-        "/heartbeat": {
-            "get": {
-                "description": "Heartbeat",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "heartbeat"
-                ],
-                "summary": "Heartbeat",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/endpoints.jsonResponse-endpoints_heartbeatOutput"
+                            "$ref": "#/definitions/Response-string"
                         }
                     }
                 }
@@ -202,22 +179,11 @@
         }
     },
     "definitions": {
-        "endpoints.heartbeatOutput": {
-            "type": "object",
-            "properties": {
-                "detail": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "endpoints.jsonResponse-endpoints_heartbeatOutput": {
+        "Response-SumOutput": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/endpoints.heartbeatOutput"
+                    "$ref": "#/definitions/SumOutput"
                 },
                 "error": {
                     "type": "boolean"
@@ -227,21 +193,7 @@
                 }
             }
         },
-        "endpoints.jsonResponse-endpoints_sumOutput": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/endpoints.sumOutput"
-                },
-                "error": {
-                    "type": "boolean"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "endpoints.jsonResponse-string": {
+        "Response-string": {
             "type": "object",
             "properties": {
                 "data": {
@@ -255,7 +207,7 @@
                 }
             }
         },
-        "endpoints.sumInput": {
+        "SumInput": {
             "type": "object",
             "required": [
                 "num1",
@@ -270,7 +222,7 @@
                 }
             }
         },
-        "endpoints.sumOutput": {
+        "SumOutput": {
             "type": "object",
             "properties": {
                 "result": {
